--- a/auntyya.html
+++ b/auntyya.html
@@ -1,394 +1,152 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>葉阿姨語音點餐系統</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #4a4a4a;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
-        h1, h2 {
-            margin: 0 0 20px;
-            font-weight: normal;
-        }
-        label {
-            display: block;
-            margin-bottom: 10px;
-            font-size: 18px;
-        }
-        #inputTextArea, #outputTextArea {
-            width: 96%;
-            height: 80px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            padding: 10px;
-            font-size: 14px;
-            resize: none;
-            background-color: #f9f9f9;
-        }
-        #clearBtn, #voiceBtn, #completeOrderBtn {
-            font-size: 14px;
-            padding: 10px 15px;
-            background-color: #6c757d;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-right: 5px;
-        }
-        #clearBtn {
-            background-color: #adb5bd;
-        }
-        #voiceBtn.recording {
-            background-color: #343a40; /* 按鈕激活時的顏色 */
-        }
-        #completeOrderBtn {
-            background-color: #6c757d;
-            margin-top: 10px;
-        }
-        #orderTable {
-            border-collapse: collapse;
-            width: 100%;
-            margin-bottom: 20px;
-            font-size: 14px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #e9ecef;
-        }
-        #totalPrice {
-            font-weight: bold;
-            font-size: 16px;
-        }
-        .quantityBtn {
-            cursor: pointer;
-            font-size: 14px;
-            padding: 5px 10px;
-            background-color: #6c757d;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            margin-right: 5px;
-        }
-        .deleteBtn {
-            cursor: pointer;
-            font-size: 14px;
-            padding: 5px 10px;
-            background-color: #adb5bd;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            margin-right: 5px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>中文文字處理系統</title>
+<style>
+    ul {
+        list-style-type: none; /* Removes bullets */
+        padding: 0;
+    }
+    li {
+        margin: 5px 0;
+    }
+</style>
 </head>
 <body>
-    <header>
-        <h1>葉阿姨語音點餐系統</h1>
-    </header>
-    <main>
-        <textarea id="inputTextArea" placeholder="點擊後開啟語音輸入..." oninput="analyzeText()"></textarea>
-        <button id="voiceBtn" onclick="startVoiceInput()">開始語音輸入</button>
-        <button id="clearBtn" onclick="clearText()">清除點餐</button>
+<div>
+  <h1>請輸入文字或數字：</h1>
+  <input type="text" id="inputText" placeholder="輸入中文文字或數字" oninput="processInput(this.value)">
+  <button onclick="toggleSpeechRecognition()">開始語音輸入</button>
+  <button onclick="clearInput()">清除</button>
+  <div>字典詞彙輸出：<span id="dictionaryOutput"></span></div>
+  <div>數字輸出：<span id="numericOutput"></span></div>
+</div>
 
-        <br>
-        <br>
+<ul id="wordsList">詞彙紀錄:</ul>
+<ul id="numbersList">數字紀錄:</ul>
 
-        <table id="orderTable">
-            <thead>
-                <tr>
-                    <th>餐點名稱</th>
-                    <th>單價</th>
-                    <th>數量</th>
-                    <th>總價</th>
-                    <th>操作</th>
-                </tr>
-            </thead>
-            <tbody id="orderTableBody">
-            </tbody>
-        </table>
-        <div>總金額：<span id="totalPrice">0</span>元</div>
-        <button id="completeOrderBtn" onclick="completeOrder()">完成訂單</button>
-    </main>
+<script>
+  const dictionary = {
+    '蔥': 0, '油': 0, '餅': 0, '不': 2, '加': 1, '蛋': 1, '大': 2,
+    '腸': 3, '肉': 3, '羹': 3, '綜': 3, '合': 4, '清': 8, '純': 9, 
+    '湯': 4, '貢': 6, '丸': 6, '小': 9, '炒': 11,'草': 11, '麵': 50
+  };
 
-    <script>
-        var itemPrices = {
-            "芝麻蔥油餅": 20,
-            "蔥油餅加蛋": 30,
-            "芝麻蔥油餅-加辣": 20,
-            "蔥油餅加蛋-加辣": 30,
-            "蛋餅加荷包蛋": 45,
-            "大腸麵線": 50,
-            "肉羹麵線": 50,
-            "綜合麵線": 50,
-            "清麵線": 40,
-            "純麵線": 40,
-            "大腸麵線-加辣": 50,
-            "肉羹麵線-加辣": 50,
-            "綜合麵線-加辣": 50,
-            "清麵線-加辣": 40,
-            "純麵線-加辣": 40,
-            "大炒麵": 40,
-            "小炒麵": 30,
-            "荷包蛋": 15,
-            "貢丸湯": 35,
-            "肉羹湯": 35,
-            "綜合湯": 35,  
-            "紅茶": 10,            
-            "奶茶": 15,
-            "豆漿": 15,
-            "米漿": 15
-        };
+  let isListening = false;
+  const recognition = new webkitSpeechRecognition();
+  recognition.lang = 'zh-Hant-TW';
+  recognition.interimResults = false;
+  recognition.continuous = false;
 
-        var homophones = {
-            "麵": ["面", "念", "唸"],
-            "線": ["鮮"],
-            "綜": ["中"],
-            "辣": ["拉","那"],
-            "合": ["和"],            
-            "清": ["青","金","新","稀"],
-            "炒": ["草", "早", "找","島","嫂"],
-            "芝麻蔥油餅": ["蔥油餅", "不加蛋","附加蛋"],
-            "蔥油餅加蛋": ["蛋餅", "加蛋"],
-            "蛋餅加荷包蛋": ["蛋蔥油餅加蛋"],
-            "大腸麵線": ["大腸","大腸麵線麵線"],
-            "綜合湯": ["綜合麵線湯"],
-            "綜合麵線": ["綜合","綜合麵線麵線"],
-            "肉羹麵線": ["肉羹","肉羹麵線麵線"],
-            "肉羹湯": ["肉羹麵線湯"],
-            "清麵線": ["清","清麵線麵線"],
-            "純麵線": ["純","純麵線麵線"],
-            "大炒麵": ["大炒","大炒麵麵","炒麵"],
-            "小炒麵": ["小炒","小大炒麵麵"], 
-            "荷包蛋": ["荷8蛋"],           
-            "蔥油餅加蛋-加辣": ["蔥油餅加蛋辣","蔥油餅加蛋加辣"],
-            "芝麻蔥油餅-加辣": ["芝麻蔥油餅加辣","芝麻蔥油餅辣"],
-            "大腸麵線-加辣": ["大腸麵線加辣","大腸麵線辣"],
-           "肉羹麵線-加辣": ["肉羹麵線加辣","肉羹麵線辣"],
-           "綜合麵線-加辣": ["綜合麵線加辣","綜合麵線辣"],
-           "清麵線-加辣": ["清麵線加辣","清麵線辣"],
+  recognition.onresult = function(event) {
+    const input = event.results[0][0].transcript;
+    document.getElementById('inputText').value = input;
+    processInput(input);
+  };
 
-            "份": ["碗", "杯", "個","玩","顆","婉","晚","分","噸","完"],
-            "1": ["一", "億"],
-            "2": ["兩", "量","涼"],
-            "3": ["三", "參"],
-            "4": ["四", "是","試"],
-            "5": ["五", "無", "午"],
-            "6": ["六", "溜"],
-            "7": ["七", "妻"],
-            "8": ["八", "咖", "包"],
-            "9": ["九", "酒"],
-            "10": ["十", "時"]
-        };
+  function toggleSpeechRecognition() {
+    if (!isListening) {
+      recognition.start();
+      isListening = true;
+    } else {
+      recognition.stop();
+      isListening = false;
+    }
+  }
 
-        function analyzeText() {
-            var inputText = document.getElementById('inputTextArea').value;
-            var matchedInfo = [];
-            var totalAmount = 0;
+  function clearInput() {
+    document.getElementById('inputText').value = '';
+    document.getElementById('dictionaryOutput').textContent = '';
+    document.getElementById('numericOutput').textContent = '';
+  }
 
-            // 同音字修正
-            for (var homophone in homophones) {
-                var homophoneArray = homophones[homophone];
-                for (var i = 0; i < homophoneArray.length; i++) {
-                    var pattern = new RegExp(homophoneArray[i], 'gi');
-                    inputText = inputText.replace(pattern, homophone);
-                }
-            }
+  function processInput(input) {
+    input = input.trim();
+    const segments = input.split(/(\d+)/).filter(Boolean); // Split input into text and numbers, and filter out empty strings
 
-            // 商品計價邏輯
-            for (var item in itemPrices) {
-                var pattern = new RegExp(item + "\\s*(\\d+)份", 'gi');
-                inputText = inputText.replace(pattern, function(match, quantity) {
-                    quantity = parseInt(quantity);
-                    var totalPrice = quantity * itemPrices[item];
-                    addToMatchedInfo(matchedInfo, item, quantity, totalPrice);
-                    totalAmount += totalPrice;
-                    return ""; // 移除已處理的文字
-                });
-            }
+    let dictionaryResults = [];
+    let numericResults = [];
 
-            // 更新訂單表格和總金額
-            updateOrderTable(matchedInfo, totalAmount);
+    segments.forEach(segment => {
+      if (/^\d+$/.test(segment)) { // If segment is purely numeric
+        numericResults.push(segment);
+        updateList('numbersList', segment);
+      } else { // Process text segment according to the dictionary
+        let sum = 0;
+        Array.from(segment).forEach(char => {
+          if (dictionary.hasOwnProperty(char)) {
+            sum += dictionary[char];
+          }
+        });
+
+        let result = '';
+        if (sum === 1 || sum === 2) {
+          result = '蔥油餅加蛋';
+        } else if (sum === 4 || sum === 3 || sum === 0) {
+          result = '芝麻蔥油餅';
+        } else if (sum === 5 || sum === 55) {
+          result = '大腸麵線';
+        } else if (sum === 6 || sum === 56) {
+          result = '肉羹麵線';
+        } else if (sum === 7 || sum === 57) {
+          result = '綜合麵線';
+        } else if (sum === 8 || sum === 58) {
+          result = '清麵線';
+        } else if (sum === 9 || sum === 59) {
+          result = '純麵線';
+        } else if (sum === 10 || sum === 60) {
+          result = '肉羹湯';
+        } else if (sum === 11) {
+          result = '綜合湯';
+        } else if (sum === 12) {
+          result = '貢丸湯';
+        } else if (sum === 13 || sum === 21 || sum === 63) {
+          result = '炒麵大份';
+        } else if (sum === 20 || sum === 70) {
+          result = '炒麵小份';
+        } else if (sum > 0) {
+          result = '未知組合';
         }
 
-        function addToMatchedInfo(matchedInfo, item, quantity, totalPrice) {
-            var existingItem = matchedInfo.find(function(element) {
-                return element.name === item;
-            });
-
-            if (existingItem) {
-                existingItem.quantity += quantity;
-                existingItem.totalPrice += totalPrice;
-            } else {
-                matchedInfo.push({
-                    name: item,
-                    quantity: quantity,
-                    price: itemPrices[item],
-                    totalPrice: totalPrice
-                });
-            }
+        if (result) {
+          dictionaryResults.push(result);
+          updateList('wordsList', result);
         }
+      }
+    });
 
-        function updateOrderTable(matchedInfo, totalAmount) {
-            var tableBody = document.getElementById('orderTableBody');
-            tableBody.innerHTML = "";
+    document.getElementById('dictionaryOutput').textContent = dictionaryResults.join('，');
+    document.getElementById('numericOutput').textContent = numericResults.join('，');
 
-            matchedInfo.forEach(function(item) {
-                var row = tableBody.insertRow();
-                var nameCell = row.insertCell(0);
-                var priceCell = row.insertCell(1);
-                var quantityCell = row.insertCell(2);
-                var totalPriceCell = row.insertCell(3);
-                var actionCell = row.insertCell(4);
+    saveToLocalStorage('dictionaryResults', dictionaryResults);
+    saveToLocalStorage('numericResults', numericResults);
+  }
 
-                nameCell.innerHTML = item.name;
-                priceCell.innerHTML = item.price;
-                quantityCell.innerHTML = item.quantity;
-                totalPriceCell.innerHTML = item.totalPrice;
+  function updateList(listId, text) {
+    const ul = document.getElementById(listId);
+    const li = document.createElement('li');
+    li.textContent = text;
+    ul.appendChild(li);
+  }
 
-                // 增加和減少數量的按鈕
-                var incrementBtn = document.createElement("button");
-                incrementBtn.innerHTML = "+";
-                incrementBtn.classList.add("quantityBtn");
-                incrementBtn.onclick = function() {
-                    item.quantity++;
-                    item.totalPrice += item.price;
-                    quantityCell.innerHTML = item.quantity;
-                    totalPriceCell.innerHTML = item.totalPrice;
-                    updateTotalPrice(matchedInfo);
-                };
+  function saveToLocalStorage(key, value) {
+    const expirationTime = new Date().getTime() + 10 * 60 * 1000; // 10 minutes from now
+    const data = { value, expirationTime };
+    localStorage.setItem(key, JSON.stringify(data));
+  }
 
-                var decrementBtn = document.createElement("button");
-                decrementBtn.innerHTML = "-";
-                decrementBtn.classList.add("quantityBtn");
-                decrementBtn.onclick = function() {
-                    if (item.quantity > 1) {
-                        item.quantity--;
-                        item.totalPrice -= item.price;
-                        quantityCell.innerHTML = item.quantity;
-                        totalPriceCell.innerHTML = item.totalPrice;
-                        updateTotalPrice(matchedInfo);
-                    }
-                };
+  function clearExpiredStorage() {
+    const now = new Date().getTime();
+    Object.keys(localStorage).forEach(key => {
+      const data = JSON.parse(localStorage.getItem(key));
+      if (data.expirationTime < now) {
+        localStorage.removeItem(key);
+      }
+    });
+  }
 
-                // 刪除按鈕
-                var deleteBtn = document.createElement("button");
-                deleteBtn.innerHTML = "刪除";
-                deleteBtn.classList.add("deleteBtn");
-                deleteBtn.onclick = function() {
-                    matchedInfo.splice(matchedInfo.indexOf(item), 1);
-                    row.remove();
-                    updateTotalPrice(matchedInfo);
-                };
-
-                actionCell.appendChild(decrementBtn);
-                actionCell.appendChild(incrementBtn);
-                actionCell.appendChild(deleteBtn);
-            });
-
-            updateTotalPrice(matchedInfo);
-        }
-
-        function updateTotalPrice(matchedInfo) {
-            var totalPriceSpan = document.getElementById('totalPrice');
-            var totalAmount = matchedInfo.reduce(function(acc, item) {
-                return acc + item.totalPrice;
-            }, 0);
-            totalPriceSpan.innerHTML = totalAmount;
-        }
-
-        function clearText() {
-            document.getElementById('inputTextArea').value = "";
-            document.getElementById('orderTableBody').innerHTML = "";
-            updateTotalPrice([]);
-        }
-
-        function completeOrder() {
-            clearText();
-        }
-
-        function startVoiceInput() {
-            const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-            if (!SpeechRecognition) {
-                alert("您的瀏覽器不支援語音識別功能，請使用最新的Chrome或Edge瀏覽器。");
-                return;
-            }
-
-            const recognition = new SpeechRecognition();
-            recognition.lang = 'zh-TW'; // 設置語言為中文(台灣)
-            const output = document.getElementById('inputTextArea');
-            var isRecording = false;
-
-            recognition.onstart = function() {
-                isRecording = true;
-                document.getElementById('voiceBtn').classList.add('recording');
-                document.getElementById('voiceBtn').textContent = '結束語音輸入';
-            };
-
-            recognition.onresult = function(event) {
-                const transcript = event.results[0][0].transcript;
-                output.value += transcript;
-                analyzeText();
-            };
-
-            recognition.onend = function() {
-                if (isRecording) {
-                    isRecording = false;
-                    document.getElementById('voiceBtn').classList.remove('recording');
-                    document.getElementById('voiceBtn').textContent = '開始語音輸入';
-                }
-            };
-
-            document.getElementById('voiceBtn').onclick = function() {
-                if (isRecording) {
-                    recognition.stop();
-                    return;
-                }
-                recognition.start();
-            };
-
-            recognition.onerror = function(event) {
-                console.error('語音識別錯誤:', event.error);
-                let errorMessage = '語音識別錯誤，請重試。';
-                switch(event.error) {
-                    case 'no-speech':
-                        errorMessage = '未偵測到語音，請再試一次。';
-                        break;
-                    case 'audio-capture':
-                        errorMessage = '未能捕獲音頻，請檢查麥克風是否已啟用。';
-                        break;
-                    case 'not-allowed':
-                        errorMessage = '語音識別被阻止，請檢查瀏覽器權限設置。';
-                        break;
-                    // 可以添加更多的錯誤處理
-                }
-                alert(errorMessage);
-            };
-        }
-    </script>
+  setInterval(clearExpiredStorage, 60000); // Clear expired items every minute
+</script>
 </body>
 </html>
