--- a/big2.html
+++ b/big2.html
@@ -11,54 +11,23 @@
             margin: 20px;
             background-color: #F5F5F5;
         }
-        .player-btn {
+        .player-btn, .settings-btn, .results-btn, .input-btn {
             width: 200px;
+            height: 50px;
             margin: 10px auto;
-            padding: 15px;
+            padding: 10px;
             color: white;
             border: none;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px;
             border-radius: 5px;
         }
-        .player-1 {
-            background-color: #8C9A78; /* 深莫蘭迪綠 */
-        }
-        .player-1:hover {
-            background-color: #6F7F5E;
-        }
-        .player-2 {
-            background-color: #B090A0; /* 深莫蘭迪紫 */
-        }
-        .player-2:hover {
-            background-color: #8E7283;
-        }
-        .player-3 {
-            background-color: #D2B282; /* 深莫蘭迪米黃 */
-        }
-        .player-3:hover {
-            background-color: #B9986A;
-        }
-        .player-4 {
-            background-color: #7A8FA1; /* 深莫蘭迪藍 */
-        }
-        .player-4:hover {
-            background-color: #5D6F80;
-        }
-        .settings-btn {
-            width: 200px;
-            margin: 20px auto;
-            padding: 15px;
-            background-color: #50597B; /* 深莫蘭迪灰藍 */
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-        }
-        .settings-btn:hover {
-            background-color: #3C4462;
-        }
+        .player-1 { background-color: #8C9A78; }
+        .player-2 { background-color: #B090A0; }
+        .player-3 { background-color: #D2B282; }
+        .player-4 { background-color: #7A8FA1; }
+        .settings-btn { background-color: #50597B; }
+        .results-btn { background-color: #007BFF; }
         .container {
             display: none;
             margin-top: 20px;
@@ -67,28 +36,47 @@
             border-radius: 5px;
             background-color: #FFFFFF;
         }
-        input[type="number"], input[type="text"] {
-            width: 80%;
-            margin: 10px auto;
+        input[type="text"], input[type="number"], input[readonly] {
+            width: 90%;
+            height: 40px;
             padding: 10px;
             font-size: 16px;
-        }
-        .multiplier-display {
-            font-size: 18px;
-            font-weight: bold;
-            margin: 20px 0;
-        }
-        button {
-            padding: 10px 15px;
-            margin: 10px;
-            font-size: 16px;
-            cursor: pointer;
+            text-align: center;
+            margin: 10px auto;
             border-radius: 5px;
-            border: none;
+            border: 1px solid #ccc;
+        }
+        input[readonly] {
+            background-color: #EFEFEF;
+            color: gray;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            width: 90%;
+            max-width: 400px;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
         }
         table {
             margin: 20px auto;
-            width: 80%;
+            width: 90%;
             border-collapse: collapse;
             background-color: #FFFFFF;
         }
@@ -97,15 +85,9 @@
             padding: 10px;
             text-align: center;
         }
-        th {
-            background-color: #EFEFEF;
-        }
-        .positive {
-            color: red;
-        }
-        .negative {
-            color: black;
-        }
+        th { background-color: #EFEFEF; }
+        .positive { color: red; }
+        .negative { color: black; }
     </style>
 </head>
 <body>
@@ -115,54 +97,71 @@
         <button class="player-btn player-2" onclick="setWinner(1)">玩家 2</button>
         <button class="player-btn player-3" onclick="setWinner(2)">玩家 3</button>
         <button class="player-btn player-4" onclick="setWinner(3)">玩家 4</button>
-        <div class="multiplier-display" id="multiplierDisplay">目前倍率：1</div>
+        <h3>總分與勝率</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>玩家</th>
+                    <th>總分</th>
+                    <th>勝率</th>
+                </tr>
+            </thead>
+            <tbody id="totalScores"></tbody>
+        </table>
+        <h3>最近兩場成績</h3>
         <table>
             <thead>
                 <tr>
                     <th>回合</th>
-                    <th id="name0">玩家 1</th>
-                    <th id="name1">玩家 2</th>
-                    <th id="name2">玩家 3</th>
-                    <th id="name3">玩家 4</th>
+                    <th>玩家 1</th>
+                    <th>玩家 2</th>
+                    <th>玩家 3</th>
+                    <th>玩家 4</th>
                 </tr>
             </thead>
-            <tbody id="scoreHistory"></tbody>
-            <tfoot>
-                <tr>
-                    <td>總分</td>
-                    <td id="total0">0</td>
-                    <td id="total1">0</td>
-                    <td id="total2">0</td>
-                    <td id="total3">0</td>
-                </tr>
-                <tr>
-                    <td>勝率</td>
-                    <td id="rate0">0%</td>
-                    <td id="rate1">0%</td>
-                    <td id="rate2">0%</td>
-                    <td id="rate3">0%</td>
-                </tr>
-            </tfoot>
+            <tbody id="latestScores"></tbody>
         </table>
-        <button class="settings-btn" onclick="openSettings()">遊戲設定</button>
+        <button class="results-btn" onclick="openResults()">每場結果</button>
+        <button class="settings-btn" onclick="openSettingsModal()">遊戲設定</button>
     </div>
 
     <div id="inputContainer" class="container">
         <h3>輸入玩家分數</h3>
         <div id="inputFields"></div>
-        <button onclick="submitScores()">確認</button>
-        <button onclick="resetRound()">取消</button>
+        <button class="input-btn" onclick="submitScores()">確認</button>
+        <button class="input-btn" onclick="resetRound()">取消</button>
     </div>
 
-    <div id="settingsContainer" class="container">
+    <div id="resultsContainer" class="container">
+        <h3>每場成績</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>回合</th>
+                    <th>玩家 1</th>
+                    <th>玩家 2</th>
+                    <th>玩家 3</th>
+                    <th>玩家 4</th>
+                </tr>
+            </thead>
+            <tbody id="allScores"></tbody>
+        </table>
+        <button class="input-btn" onclick="closeResults()">關閉</button>
+    </div>
+
+    <div class="overlay" id="overlay"></div>
+    <div class="modal" id="settingsModal">
         <h3>遊戲設定</h3>
         <input id="playerName0" type="text" placeholder="玩家 1 名稱">
         <input id="playerName1" type="text" placeholder="玩家 2 名稱">
         <input id="playerName2" type="text" placeholder="玩家 3 名稱">
         <input id="playerName3" type="text" placeholder="玩家 4 名稱">
-        <input id="multiplier" type="number" placeholder="計分倍率" min="1" value="1">
+        <div>
+            <label for="multiplier">倍率</label>
+            <input id="multiplier" type="number" min="1" value="1">
+        </div>
         <button onclick="saveSettings()">儲存設定</button>
-        <button onclick="resetGame()">重置遊戲</button>
+        <button onclick="closeSettingsModal()">取消</button>
     </div>
 
     <script>
@@ -171,17 +170,29 @@
         let roundNumber = JSON.parse(localStorage.getItem("roundNumber")) || 1;
         let multiplier = JSON.parse(localStorage.getItem("multiplier")) || 1;
         let playerNames = JSON.parse(localStorage.getItem("playerNames")) || ["玩家 1", "玩家 2", "玩家 3", "玩家 4"];
+        let history = JSON.parse(localStorage.getItem("history")) || [];
         let currentWinner = null;
 
         document.addEventListener("DOMContentLoaded", () => {
             updatePlayerNames();
-            updateScoreTable();
-            updateMultiplierDisplay();
+            updateTotalScores();
+            updateLatestScores();
         });
 
-        function openSettings() {
-            document.getElementById("mainContainer").style.display = "none";
-            document.getElementById("settingsContainer").style.display = "block";
+        function openSettingsModal() {
+            document.getElementById("settingsModal").style.display = "block";
+            document.getElementById("overlay").style.display = "block";
+
+            document.getElementById("playerName0").value = playerNames[0];
+            document.getElementById("playerName1").value = playerNames[1];
+            document.getElementById("playerName2").value = playerNames[2];
+            document.getElementById("playerName3").value = playerNames[3];
+            document.getElementById("multiplier").value = multiplier;
+        }
+
+        function closeSettingsModal() {
+            document.getElementById("settingsModal").style.display = "none";
+            document.getElementById("overlay").style.display = "none";
         }
 
         function saveSettings() {
@@ -194,20 +205,14 @@
             multiplier = parseInt(document.getElementById("multiplier").value) || 1;
             localStorage.setItem("playerNames", JSON.stringify(playerNames));
             localStorage.setItem("multiplier", multiplier);
+            closeSettingsModal();
             updatePlayerNames();
-            updateMultiplierDisplay();
-            document.getElementById("mainContainer").style.display = "block";
-            document.getElementById("settingsContainer").style.display = "none";
-        }
-
-        function updateMultiplierDisplay() {
-            document.getElementById("multiplierDisplay").textContent = `目前倍率：${multiplier}`;
         }
 
         function updatePlayerNames() {
             playerNames.forEach((name, index) => {
-                document.getElementById(`name${index}`).textContent = name;
-                document.querySelectorAll(".player-btn")[index].textContent = name;
+                const button = document.querySelector(`.player-${index + 1}`);
+                if (button) button.textContent = name;
             });
         }
 
@@ -215,25 +220,21 @@
             currentWinner = winnerIndex;
             document.getElementById("mainContainer").style.display = "none";
             document.getElementById("inputContainer").style.display = "block";
+
             const inputFields = document.getElementById("inputFields");
             inputFields.innerHTML = "";
-
             playerNames.forEach((name, index) => {
+                const label = document.createElement("label");
+                label.textContent = name;
+                const input = document.createElement("input");
+                input.type = "number";
+                input.id = `loss${index}`;
                 if (index === winnerIndex) {
-                    const input = document.createElement("div");
-                    input.innerHTML = `
-                        <label class="name-label win-label">${name} - Win</label>
-                        <input id="winner${index}" type="text" value="Win" readonly>
-                    `;
-                    inputFields.appendChild(input);
-                } else {
-                    const input = document.createElement("div");
-                    input.innerHTML = `
-                        <label class="name-label name-${index + 1}">${name}</label>
-                        <input id="loss${index}" type="number" placeholder="輸入失分">
-                    `;
-                    inputFields.appendChild(input);
+                    input.value = "Win";
+                    input.readOnly = true;
                 }
+                inputFields.appendChild(label);
+                inputFields.appendChild(input);
             });
         }
 
@@ -250,40 +251,64 @@
             });
 
             roundScores[currentWinner] = totalLoss;
-
-            // 更新分數
+            history.push(roundScores);
             scores = scores.map((score, i) => score + roundScores[i]);
-            if (roundScores[currentWinner] > 0) winCounts[currentWinner]++;
-            roundNumber++;
-
-            // 儲存到 Local Storage
+            winCounts[currentWinner]++;
+            localStorage.setItem("history", JSON.stringify(history));
             localStorage.setItem("scores", JSON.stringify(scores));
             localStorage.setItem("winCounts", JSON.stringify(winCounts));
-            localStorage.setItem("roundNumber", roundNumber);
-
-            addRoundToHistory(roundScores);
-            updateScoreTable();
+            roundNumber++;
+            updateTotalScores();
+            updateLatestScores();
             resetRound();
         }
 
-        function addRoundToHistory(roundScores) {
-            const scoreHistory = document.getElementById("scoreHistory");
-            const row = document.createElement("tr");
-            row.innerHTML = `<td>回合 ${roundNumber - 1}</td>` + roundScores.map(score =>
-                `<td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>`).join("");
-            scoreHistory.appendChild(row);
+        function updateTotalScores() {
+            const totalScoresTable = document.getElementById("totalScores");
+            totalScoresTable.innerHTML = "";
+            scores.forEach((score, index) => {
+                const winRate = roundNumber > 1 ? `${((winCounts[index] / (roundNumber - 1)) * 100).toFixed(1)}%` : "0%";
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>${playerNames[index]}</td>
+                    <td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>
+                    <td>${winRate}</td>
+                `;
+                totalScoresTable.appendChild(row);
+            });
         }
 
-        function updateScoreTable() {
-            scores.forEach((score, index) => {
-                document.getElementById(`total${index}`).textContent = score;
-                document.getElementById(`total${index}`).className = score > 0 ? "positive" : "negative";
+        function updateLatestScores() {
+            const latestScoresTable = document.getElementById("latestScores");
+            latestScoresTable.innerHTML = "";
+            const latestRounds = history.slice(-2);
+            latestRounds.forEach((round, index) => {
+                const row = document.createElement("tr");
+                row.innerHTML = `<td>回合 ${history.length - latestRounds.length + index + 1}</td>` + round.map(score =>
+                    `<td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>`).join("");
+                latestScoresTable.appendChild(row);
             });
+        }
 
-            const totalRounds = roundNumber - 1;
-            winCounts.forEach((count, index) => {
-                const winRate = totalRounds > 0 ? `${((count / totalRounds) * 100).toFixed(1)}%` : "0%";
-                document.getElementById(`rate${index}`).textContent = winRate;
+        function openResults() {
+            document.getElementById("mainContainer").style.display = "none";
+            document.getElementById("resultsContainer").style.display = "block";
+            updateHistory();
+        }
+
+        function closeResults() {
+            document.getElementById("mainContainer").style.display = "block";
+            document.getElementById("resultsContainer").style.display = "none";
+        }
+
+        function updateHistory() {
+            const allScoresTable = document.getElementById("allScores");
+            allScoresTable.innerHTML = "";
+            history.forEach((round, index) => {
+                const row = document.createElement("tr");
+                row.innerHTML = `<td>回合 ${index + 1}</td>` + round.map(score =>
+                    `<td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>`).join("");
+                allScoresTable.appendChild(row);
             });
         }
 
@@ -293,18 +318,17 @@
         }
 
         function resetGame() {
-            localStorage.clear();
             scores = [0, 0, 0, 0];
             winCounts = [0, 0, 0, 0];
             roundNumber = 1;
-            multiplier = 1;
-            playerNames = ["玩家 1", "玩家 2", "玩家 3", "玩家 4"];
-            updatePlayerNames();
-            updateMultiplierDisplay();
-            updateScoreTable();
-            document.getElementById("scoreHistory").innerHTML = "";
-            document.getElementById("mainContainer").style.display = "block";
-            document.getElementById("settingsContainer").style.display = "none";
+            history = [];
+            localStorage.setItem("scores", JSON.stringify(scores));
+            localStorage.setItem("winCounts", JSON.stringify(winCounts));
+            localStorage.setItem("roundNumber", JSON.stringify(roundNumber));
+            localStorage.setItem("history", JSON.stringify(history));
+            updateTotalScores();
+            updateLatestScores();
+            closeResults();
         }
     </script>
 </body>
